# x50

./: README.md
src/iPendant_160503/: CMakeLists.txt  README.md
src/iPendant_160503/launch/: ipendant.launch~
src/iPendant_160503/src/interface/: commandHandler.cpp  commandHandler.h  commandProcessor.cpp  playback.cpp  res.h  working_thread.cpp
src/x50_description/urdf/: x50_moveit.urdf
src/x50_interface/: CMakeLists.txt  package.xml
src/x50_interface/launch/: x50_interface.launch  x50_interface.launch~
src/x50_interface/src/: coordinator_dialog.cpp  coordinator_dialog.ui  interface.cpp
src/x50_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/x50_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  joint_limits.yaml~  kinematics.yaml  ompl_planning.yaml  x50.srdf
src/x50_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  home_warehouse_db.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  x50.rviz  x50_group.launch  x50_run.launch  x50_run_all.launch  x50_run_all.launch~  x50_run_rviz.launch  x50_run_rviz.launch~  x50_run_with_coordinator.launch  x50_run_with_coordinator.launch~  x50_run_with_rviz.launch  x50_run_with_rviz.launch~  x50_rviz.launch  x50_with_rviz.launch~
